BS-1 add ziggy and password reset endpoints

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@vue/tsconfig": "^0.8.1",
         "primevue": "^4.4.1",
         "typescript": "^5.9.3",
-        "vue": "^3.5.25"
+        "vue": "^3.5.25",
+        "ziggy-js": "^2.6.0"
     }
 }
