--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/fortify": "^1.32",
         "laravel/framework": "^12.0",
+        "laravel/reverb": "^1.0",
         "laravel/tinker": "^2.10.1",
         "tightenco/ziggy": "^2.6"
     },
