--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@vitejs/plugin-vue": "^6.0.2",
         "@vue/tsconfig": "^0.8.1",
         "lodash": "^4.17.21",
+        "pinia": "^3.0.4",
         "primevue": "^4.4.1",
         "typescript": "^5.9.3",
         "vite-svg-loader": "^5.1.0",
